修复性能测试的BUG